Try to fix stacktrace